QtQQ-CCMainWindow-SkinWindow 05

--- a/CCMainWindow.ui
+++ b/CCMainWindow.ui
@@ -134,7 +134,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="palcehold2">
+         <widget class="QPushButton" name="placehold2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
