QtQQ-提升发送信息部件 12

--- a/TalkWindow.ui
+++ b/TalkWindow.ui
@@ -641,7 +641,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QTextEdit" name="textEdit">
+         <widget class="QMsgTextEdit" name="textEdit">
           <property name="contextMenuPolicy">
            <enum>Qt::NoContextMenu</enum>
           </property>
@@ -815,6 +815,13 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QMsgTextEdit</class>
+   <extends>QTextEdit</extends>
+   <header location="global">qmsgtextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
